# zep_clockify

./: .gitignore  Cargo.toml  README.md
clockify-rs/: Cargo.toml
clockify-rs/examples/: clockify_cli.rs
clockify-rs/src/: client.rs  config.rs  error.rs  json.rs  lib.rs  uri_builder.rs
src/: csv_deserialize.rs  csv_parser.rs  main.rs  options.rs  projects_loader.rs
struct_info/: Cargo.toml
struct_info/src/: lib.rs
zep_clockify/: Cargo.toml
zep_clockify/src/: csv_deserialize.rs  csv_parser.rs  main.rs  projects_loader.rs
