[package]
name = "clockify-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
serde_json = "1.0"
toml = "0.7"
quick-error = "2.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body = "0.4"
hyper-tls = "0.5"

[dev-dependencies]
anyhow = "1.0"
